crates/alder-parse/src/declaration/snapshots/alder_parse__declaration__union__tests__union_multiline.snap
---
source: crates/alder-parse/src/declaration/union.rs
description: "type Msg\n    = Increment\n    | Decrement\n    | Reset\n"
---
Union(
    None,
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 5,
                column: 1,
            },
        },
        value: Union {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: "Msg",
            },
            arguments: [],
            ctors: [
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 7,
                            },
                            end: Position {
                                line: 2,
                                column: 16,
                            },
                        },
                        value: "Increment",
                    },
                    arguments: [],
                },
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 7,
                            },
                            end: Position {
                                line: 3,
                                column: 16,
                            },
                        },
                        value: "Decrement",
                    },
                    arguments: [],
                },
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 7,
                            },
                            end: Position {
                                line: 4,
                                column: 12,
                            },
                        },
                        value: "Reset",
                    },
                    arguments: [],
                },
            ],
        },
    },
)
