crates/alder-parse/src/declaration/snapshots/alder_parse__declaration__union__tests__union_with_params.snap
---
source: crates/alder-parse/src/declaration/union.rs
description: type Maybe a = Just a | Nothing
---
Union(
    None,
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 32,
            },
        },
        value: Union {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                value: "Maybe",
            },
            arguments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 12,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: "a",
                },
            ],
            ctors: [
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 16,
                            },
                            end: Position {
                                line: 1,
                                column: 20,
                            },
                        },
                        value: "Just",
                    },
                    arguments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 21,
                                },
                                end: Position {
                                    line: 1,
                                    column: 22,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 25,
                            },
                            end: Position {
                                line: 1,
                                column: 32,
                            },
                        },
                        value: "Nothing",
                    },
                    arguments: [],
                },
            ],
        },
    },
)
